# bookly

./: README.md  main.py  pyproject.toml
migrations/: README  env.py
migrations/versions/: 1ad48e4aabc7_add_tags.py  22a3e469a4c1_relate_users_to_books.py  5b05959a63b0_add_review_table.py  85d0a67ab0b1_exclude_password_hash.py  8c7c88e3e849_add_tags.py  9d9bd575076c_relacion_user_y_book.py  ac975330fc4a_init.py
src/: __init__.py  celery_tasks.py  config.py  errors.py  mail.py  middleware.py
src/auth/: dependencies.py  models.py  router.py  schemas.py  services.py  utils.py
src/books/: book_data.py  models.py  router.py  routes.py  schemas.py  services.py
src/db/: main.py  models.py  redis.py
src/reviews/: router.py  schemas.py  services.py
src/tags/: router.py  schemas.py  services.py
