[project]
name = "bookly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioredis>=2.0.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.3",
    "passlib>=1.7.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "redis>=7.4.0",
    "sqlmodel>=0.0.38",
]
